--- a/src/components/parts/OutputDisplay.css
+++ b/src/components/parts/OutputDisplay.css
@@ -1,8 +1,6 @@
 .output-display {
 	min-width: 12px;
-  min-height: 12px;
-
-	width: 5000px;
+  min-height: 12px; 
 	height: 100%; 
 	background: #272727;
 	position: relative;
@@ -12,7 +10,12 @@
 	overflow: hidden;
 }
 
+.output-display-opening {
+	max-height: 100%;
+}
+
 .output-display-open {
+	max-height: 100%;
 	resize: both; 
 }
 
@@ -20,12 +23,6 @@
 	transition: width 2s, height 2s;
 	resize: none; 
 	background: red;
-}
-
-.output-display-closed {    
-	max-width: 100%;
-	max-height: 0;
-	resize: none; 
 }
 
 .output-display-closing-width {
@@ -45,6 +42,14 @@
 	height: 0 !important;
 	min-height: 100%; 
 }
+
+.output-display-closed {    
+	max-width: 100%;
+	max-height: 100%;
+	resize: none; 
+}
+
+
    
 .output-display-refresh { 
 /*	width: 100%; 
